<resources>
    <string name="app_name">Urban Rider</string>
    <string name="title_activity_maps">Map</string>
    <string name="urban_rider">Urban Rider</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_challenges">Challenges</string>
    <string name="menu_share_equipment">Share eco equipment</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="ion_ionescu">Ion Ionescu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_share_eco_equipment">Share eco equipment</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="string_ride_finished">Ride finished</string>
    <string name="string_cancel">Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="filters">Filters</string>
    <string name="shoes_number">Shoes number:</string>
    <string name="wheels_type">Wheels type:</string>
    <string name="linear">Linear</string>
    <string name="parallel">Parallel</string>
    <string name="number_of_wheels">Number of wheels:</string>
    <string name="you_ve_just_ended_the_trip">You\'ve just ended the trip !</string>
    <string name="please_take_a_photo_or_upload_one">Please take a photo or upload one</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="string_description_text">This is a text that suits a description</string>
    <string name="string_order">order</string>
    <string name="string_checkocc">check occupancy</string>
    <string name="string_ticket_notification">Ticket notification</string>
    <string name="string_ok">OK</string>
    <string name="string_dismiss">DISMISS</string>
    <string name="manage">MANAGE</string>
    <string name="my_equipments">My equipments:</string>
    <string name="string_ticket_order_body">Your ticket has been ordered! Please check the ticket section for information.</string>
    <string name="string_non_empty_input_warning">Input must not be empty!</string>
    <string name="string_write_review">Write your review..</string>
    <string name="start_point"><u>Gr. Alexandrescu</u></string>
    <string name="end_point"><u>Splaiul Independentei</u></string>
    <string name="string_login_cred_user">admin@gmail.com</string>
    <string name="string_login_cred_pass">123</string>
    <string name="string_logged_out">Logged out</string>
    <string name="finish_ride">Finish ride</string>
    <string name="you_have_started_your_ride_enjoy">You have started your ride, enjoy !</string>
    <string name="enjoy_your_ride_press_finish_ride_when_you_end_your_trip">Enjoy your ride ! Press FINISH RIDE when you end your trip</string>
    <string name="distance">Distance:</string>
    <string-array name="number_of_seats">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="height_intervals">
        <item>150cm - 160cm</item>
        <item>160cm - 170cm</item>
        <item>170cm - 180cm</item>
        <item>180cm +</item>
    </string-array>
    <string-array name="battery_life">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="shoes_number">
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
    </string-array>
    <string-array name="bike_type">
        <item>Mountain</item>
        <item>City</item>
    </string-array>
    <string-array name="currency">
        <item>Lei</item>
        <item>$</item>
        <item>€</item>
    </string-array>
    <string-array name="roller_skaters_type">
        <item>Parallel</item>
        <item>Linear</item>
    </string-array>
    <string-array name="protection">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="wheels_number">
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>