<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_reviews" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tickets" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_challenges" />
        <item
            android:id="@+id/nav_share_equipment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_share_equipment" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dashboard" />
    </group>
</menu>