<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/urbanDarkGreen"
    android:padding="15dp"
    android:layout_margin="5dp"
    >

    <ImageView
        android:id="@+id/layout_transport_result_image"
        android:layout_width="200px"
        android:layout_height="200px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_directions_car_48"
    />

    <TextView
        android:id="@+id/layout_transport_result_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/layout_transport_result_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layout_transport_result_image"
        android:paddingHorizontal="10dp"
        android:textAlignment="center"
        android:text="@string/ion_ionescu"
        android:textSize="22sp"
        android:textColor="@color/white"
    />

    <TextView
        android:id="@+id/layout_transport_result_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_transport_result_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/string_description_text"
        android:textColor="@color/white"
        android:textSize="14sp"
    />

    <TextView
        android:id="@+id/layout_transport_result_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_transport_result_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/string_order"
        android:textColor="@color/urbanLightGreen"
        android:textAllCaps="true"
        android:background="@color/urbanDarkGreen"
        android:shadowColor="@color/urbanLightGreen"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>