<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/urbanDarkBlue"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="400px"
        android:layout_height="400px"
        android:src="@drawable/ic_baseline_directions_bus_48"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
    />

    <TextView
        android:id="@+id/login_logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:text="@string/urban_rider"
        android:textColor="@color/white"
    />

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingBottom="20dp"
        android:backgroundTint="@color/white"
        android:id="@+id/username"
        android:minWidth="380dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="@string/string_login_cred_user"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingBottom="20dp"
        android:backgroundTint="@color/white"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:text="@string/string_login_cred_pass"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:selectAllOnFocus="true"
        android:nextFocusDown="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/forgot_password_btn"
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Forgot your password?"
        android:textSize="15dp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:clickable="true"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_round_corners"
        android:padding="5dp"
        android:textColor="@color/white"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/login_error_view"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invalid password"
        android:textSize="20dp"
        android:textColor="@color/urbanViolet"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:visibility="gone"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/create_account_btn"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create account"
        android:textSize="18dp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_error_view"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/google_signin"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="Sign in using Google"
        android:drawableLeft="@drawable/common_google_signin_btn_icon_dark_normal"
        android:textSize="18dp"
        android:textColor="@color/urbanLightGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        />
</androidx.constraintlayout.widget.ConstraintLayout>