<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/urbanDarkBlue"
    tools:context=".UploadPhotoActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/main_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

        <TextView
            android:id="@+id/review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_ve_just_ended_the_trip"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="100dp"
            android:background="@color/urbanDarkGreen"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_title">

            <TextView
                android:id="@+id/upload_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_take_a_photo_or_upload_one"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:onClick="takePhoto"
                app:layout_constraintTop_toBottomOf="@id/upload_description">

                <ImageView
                    android:id="@+id/take_photo_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/take_photo" />

                <TextView
                    android:id="@+id/take_photo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/take_photo"
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/take_photo_img"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="50dp"
                    android:clickable="true"
                    android:onClick="uploadPhoto"
                    app:layout_constraintTop_toBottomOf="@id/take_photo_img">

                    <ImageView
                        android:id="@+id/upload_photo_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/upload_photo" />

                    <TextView
                        android:id="@+id/upload_photo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/upload_photo"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@id/upload_photo_img"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <Button
                        android:id="@+id/upload_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/urbanLightGreen"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/string_ok"
                        android:onClick="endFlow"
                        android:enabled="false"
                        android:textColor="@android:color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/upload_photo_text"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>